--- a/scrpt/main.html
+++ b/scrpt/main.html
@@ -25,11 +25,11 @@
         </div>
         <div id="direita">
             <h2>Sobre</h2>
-            <p>Hoje, vamos falar sobre as doenças de pele mais comuns no mundo: acne, dermatite atópica (eczema) e psoríase. Essas condições afetam milhões de pessoas, causando desconforto físico e emocional. A acne é comum na adolescência e pode persistir na vida adulta; a dermatite atópica provoca coceira e inflamação crônicas; e a psoríase resulta em lesões escamosas devido ao crescimento rápido das células da pele. A tecnologia está revolucionando o tratamento dessas doenças com ferramentas como teledermatologia, inteligência artificial, aplicativos de saúde, dermatoscopia digital e terapias a laser, tornando o diagnóstico e o tratamento mais acessíveis e eficazes.</p>
+            <p>Hoje, vamos falar sobre as doenças de pele mais comuns no mundo: acne, dermatite atópica (eczema) e psoríase. Essas condições afetam milhões de pessoas, causando desconforto físico e emocional. <br> <br> A acne é comum na adolescência e pode persistir na vida adulta; a dermatite atópica provoca coceira e inflamação crônicas; e a psoríase resulta em lesões escamosas devido ao crescimento rápido das células da pele. <br> <br> A tecnologia está revolucionando o tratamento dessas doenças com ferramentas como teledermatologia, inteligência artificial, aplicativos de saúde, dermatoscopia digital e terapias a laser, tornando o diagnóstico e o tratamento mais acessíveis e eficazes.</p>
 
         </div>
         <footer>Feito por: <br>
-            Eduardo Vemba 202300364 & Muhamedi Djane
+            Eduardo Vemba 202300364 & Muhamedi Djane 202300366
         </footer>
     </article>
     <div>
