Melhorei os scrpt

--- a/scrpt/dermatite.html
+++ b/scrpt/dermatite.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Psoriase</title>
+    <title>Dermatite Atópica</title>
     <link rel="stylesheet" href="../style/style.css">
-
 </head>
 <body>
+
 
 <article>
 <header>Doenças</header>
@@ -24,7 +24,7 @@
         </nav>
     </div>
     <div id="direita">
-        <h2>Medicamentos</h2>
+        <h2>Dermatite Atópica</h2>
         <p>A acne é uma doença de pele comum que ocorre quando os folículos pilosos ficam obstruídos por óleo e células mortas da pele. Essa obstrução leva ao desenvolvimento de cravos, espinhas e, em casos mais graves, cistos e nódulos. <br> <br> <img src="../img/acne.jpeg" alt=""> <br> <br> <br> <br> <br> <br> A condição é frequentemente associada a alterações hormonais que aumentam a produção de sebo (óleo) pelas glândulas sebáceas, especialmente durante a adolescência. <br> <br>Bactérias presentes na pele, como a Propionibacterium acnes, podem infectar os folículos bloqueados, resultando em inflamação.</p>
     </div>
 </article>
