--- a/scrpt/main.html
+++ b/scrpt/main.html
@@ -17,7 +17,10 @@
         <div id="esquerda">
             <nav>
                 <ul id="menu">
-                    <li><a href="Doencas.html">Doenças</a></li>
+                    <li><a href="main.html">Inicio</a></li>
+                    <li><a href="Acne.html">Acne</a></li>
+                    <li><a href="dermatite.html">Dermatite Atópica </a></li>
+                    <li><a href="psoriase.html">Psoríase</a></li>
                     <li><a href="Tecnologia.html">Tecnologia</a></li>
                     <li><a href="Medicamentos.html">Medicamentos</a></li>
                 </ul>
@@ -27,6 +30,10 @@
             <h2>Sobre</h2>
             <p>Hoje, vamos falar sobre as doenças de pele mais comuns no mundo: acne, dermatite atópica (eczema) e psoríase. Essas condições afetam milhões de pessoas, causando desconforto físico e emocional. <br> <br> A acne é comum na adolescência e pode persistir na vida adulta; a dermatite atópica provoca coceira e inflamação crônicas; e a psoríase resulta em lesões escamosas devido ao crescimento rápido das células da pele. <br> <br> A tecnologia está revolucionando o tratamento dessas doenças com ferramentas como teledermatologia, inteligência artificial, aplicativos de saúde, dermatoscopia digital e terapias a laser, tornando o diagnóstico e o tratamento mais acessíveis e eficazes.</p>
 
+        </div>
+        <br><br>
+        <div id="direita2">
+            <p>Além das inovações tecnológicas, a pesquisa científica contínua está trazendo novas perspectivas para o tratamento das doenças de pele. Novos medicamentos, como os biológicos para psoríase e dermatite atópica, estão oferecendo opções mais eficazes e específicas para os pacientes. <br> <br> A conscientização sobre a importância de cuidados preventivos, como o uso regular de protetor solar e uma rotina de cuidados com a pele, também está em ascensão, ajudando a reduzir a incidência e a gravidade dessas condições. <br> <br> A colaboração entre dermatologistas, pesquisadores e tecnólogos promete um futuro com tratamentos mais personalizados e menos invasivos, melhorando significativamente a qualidade de vida dos pacientes.</p>
         </div>
         <footer>Feito por: <br>
             Eduardo Vemba 202300364 & Muhamedi Djane 202300366
