--- a/scrpt/Tecnologia.html
+++ b/scrpt/Tecnologia.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dermatite</title>
-   <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
-    ola
+
+<article>
+<header>Doenças</header>
+    <div id="esquerda">
+        <nav>
+            <ul id="menu">
+                <li><a href="main.html">Inicio</a></li>
+                <li><a href="Acne.html">Acne</a></li>
+                <li><a href="dermatite.html">Dermatite Atópica </a></li>
+                <li><a href="psoriase.html">Psoríase</a></li>
+                <li><a href="Tecnologia.html">Tecnologia</a></li>
+                <li><a href="Medicamentos.html">Medicamentos</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div id="direita">
+        <h2>Tecnologia e seu Beneficios</h2>
+        <p>A acne é uma doença de pele comum que ocorre quando os folículos pilosos ficam obstruídos por óleo e células mortas da pele. Essa obstrução leva ao desenvolvimento de cravos, espinhas e, em casos mais graves, cistos e nódulos. <br> <br> <img src="../img/acne.jpeg" alt=""> <br> <br> <br> <br> <br> <br> A condição é frequentemente associada a alterações hormonais que aumentam a produção de sebo (óleo) pelas glândulas sebáceas, especialmente durante a adolescência. <br> <br>Bactérias presentes na pele, como a Propionibacterium acnes, podem infectar os folículos bloqueados, resultando em inflamação.</p>
+    </div>
+</article>
     
 </body>
 </html>
