Adicionado outras pág.

--- a/scrpt/Acne.html
+++ b/scrpt/Acne.html
@@ -6,6 +6,9 @@
     <title>Acne</title>
     <link rel="stylesheet" href="../style/style.css">
 </head>
+<div class="title">
+    <h1>Digital Health</h1>
+</div>
 <body>
 
 
@@ -16,20 +19,29 @@
             <ul id="menu">
                 <li><a href="main.html">Inicio</a></li>
                 <li><a href="Acne.html">Acne</a></li>
+                <li><a href="tecnologia-acne.html">Tec.Acne</a></li>
                 <li><a href="dermatite.html">Dermatite Atópica </a></li>
+                <li><a href="tecnologi-dermatite.html">Tec.Dermatite</a></li>
                 <li><a href="psoriase.html">Psoríase</a></li>
-                <li><a href="Tecnologia.html">Tecnologia</a></li>
+                <li><a href="Tecnologia.html">Tec.Psoríase</a></li>
                 <li><a href="Medicamentos.html">Medicamentos</a></li>
+                <li><a href="sug.html">Plus</a></li>
             </ul>
         </nav>
     </div>
     <div id="direita">
         <h2>Acne</h2>
-        <p>A acne é uma doença de pele comum que ocorre quando os folículos pilosos ficam obstruídos por óleo e células mortas da pele. Essa obstrução leva ao desenvolvimento de cravos, espinhas e, em casos mais graves, cistos e nódulos. <br>  <img src="../img/acne.jpeg" alt="" class="img1"> <br> <br> <br> <br> <br> <br> A condição é frequentemente associada a alterações hormonais que aumentam a produção de sebo (óleo) pelas glândulas sebáceas, especialmente durante a adolescência. <br> 
+        <p>A acne é uma doença de pele comum que ocorre quando os folículos pilosos ficam obstruídos por óleo e células mortas da pele. Essa obstrução leva ao desenvolvimento de cravos, espinhas e, em casos mais graves, cistos e nódulos. <br>  <img src="../img/acne.jpeg" alt="" class="img1"> <br> A condição é frequentemente associada a alterações hormonais que aumentam a produção de sebo (óleo) pelas  <br>glândulas sebáceas, especialmente durante a adolescência. <br> 
 
             <img src="/img/acne2.jpg" alt="" class="img2">
             <br> <br><br><br> 
-            <br>Bactérias presentes na pele, como a Propionibacterium acnes, podem infectar os folículos bloqueados, resultando em inflamação.</p>
+            <br>Bactérias presentes na pele, como a Propionibacterium acnes, podem infectar os folículos bloqueados, resultando em inflamação. <br> <br>
+
+            A acne pode afetar pessoas de todas as idades, embora seja mais comum durante a adolescência e início da idade adulta. Isso ocorre devido às mudanças hormonais significativas que acontecem nessas fases da vida, particularmente o aumento na produção de andrógenos. Esses hormônios estimulam as glândulas sebáceas a produzirem mais óleo, aumentando a probabilidade de obstrução dos poros. No entanto, muitos adultos, especialmente mulheres, podem continuar a enfrentar problemas com acne bem além da adolescência, muitas vezes devido a flutuações hormonais relacionadas ao ciclo menstrual, gravidez ou condições médicas como a síndrome do ovário policístico. <br> <br> 
+
+            <img src="/img/acne3.webp" alt="" class="img3">
+            <br> <br> <br>
+        </p>
     </div>
 </article>
     
