--- a/scrpt/main.html
+++ b/scrpt/main.html
@@ -19,10 +19,13 @@
                 <ul id="menu">
                     <li><a href="main.html">Inicio</a></li>
                     <li><a href="Acne.html">Acne</a></li>
+                    <li><a href="tecnologia-acne.html">Tec.Acne</a></li>
                     <li><a href="dermatite.html">Dermatite Atópica </a></li>
+                    <li><a href="tecnologi-dermatite.html">Tec.Dermatite</a></li>
                     <li><a href="psoriase.html">Psoríase</a></li>
-                    <li><a href="Tecnologia.html">Tecnologia</a></li>
+                    <li><a href="Tecnologia.html">Tec.Psoríase</a></li>
                     <li><a href="Medicamentos.html">Medicamentos</a></li>
+                    <li><a href="sug.html">Plus</a></li>
                 </ul>
             </nav>
         </div>
