--- a/scrpt/tecnologia-acne.html
+++ b/scrpt/tecnologia-acne.html
@@ -4,8 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style/style.css">
+  
 </head>
+<div class="title">
+        <h1>Digital Health</h1>
+</div>
 <body>
-    
+
+    <article>
+        <header>Tecnologia na Acne</header>
+        <div id="esquerda">
+            <nav>
+                <ul id="menu">
+                    <li><a href="main.html">Inicio</a></li>
+                    <li><a href="Acne.html">Acne</a></li>
+                    <li><a href="tecnologia-acne.html">Tec.Acne</a></li>
+                    <li><a href="dermatite.html">Dermatite Atópica </a></li>
+                    <li><a href="tecnologi-dermatite.html">Tec.Dermatite</a></li>
+                    <li><a href="psoriase.html">Psoríase</a></li>
+                    <li><a href="Tecnologia.html">Tec.Psoríase</a></li>
+                    <li><a href="Medicamentos.html">Medicamentos</a></li>
+                    <li><a href="sug.html">Plus</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div id="direita">
+            <h2>Tec. Acne</h2>
+               <p>
+                Agora irei mostrar como a tecnologia pode ajudar no tratamento da Acne
+               </p>
+        </div>
+        <br><br>
+        <div id="direita2">
+            <p>
+                Microagulhamento com radiofrequência: Esta técnica combina microagulhas com energia de radiofrequência. As microagulhas criam pequenos canais na pele, enquanto a radiofrequência estimula a produção de colágeno. Isso ajuda a reduzir cicatrizes de acne e melhora a textura da pele. <br> <br>
+                Laser fracionado: Utiliza feixes de laser para criar microlesões controladas na pele, estimulando a regeneração e reduzindo cicatrizes. O laser CO2 fracionado é particularmente eficaz para cicatrizes de acne profundas. <br> <br>
+                Ultrassom microfocado: Esta tecnologia usa ondas de ultrassom para atingir camadas profundas da pele, estimulando a produção de colágeno e elastina. Pode ser útil para melhorar a textura da pele e reduzir a aparência de poros dilatados, comuns em peles acneicas. <br> <br>
+                Sistemas de análise de pele baseados em IA: Câmeras especializadas capturam imagens detalhadas da pele, e algoritmos de IA analisam fatores como tipo de acne, distribuição das lesões e níveis de oleosidade. Isso permite um diagnóstico mais preciso e um plano de tratamento personalizado.
+            </p>
+        </div>
+        <footer>Feito por: <br>
+            Eduardo Vemba 202300364 & Muhamedi Djane 202300366
+        </footer>
+    </article>
+    <div>
 </body>
 </html>
