Adicionado conteudo e imagens para Psicoriase

--- a/scrpt/psoriase.html
+++ b/scrpt/psoriase.html
@@ -23,14 +23,25 @@
                 <li><a href="tecnologi-dermatite.html">Tec.Dermatite</a></li>
                 <li><a href="psoriase.html">Psoríase</a></li>
                 <li><a href="Tecnologia.html">Tec.Psoríase</a></li>
-                <li><a href="Medicamentos.html">Medicamentos</a></li>
                 <li><a href="sug.html">Plus</a></li>
             </ul>
         </nav>
     </div>
     <div id="direita">
         <h2>Psoríase</h2>
+        <div class="p-images">
+            <img src="/img/psoriase.jpg" alt="exemplo" class="img4">
+            <img src="/img/psoriase2.jpg" alt="exemplo" class="img5">
+            <img src="/img/psoriase3.webp" alt="exemplo" class="img6">
+        </div>
         <p>
+            A psoríase é uma doença autoimune crônica que afeta principalmente a pele. Aqui está um resumo sobre a psoríase: <br><br>
+            A psoríase se caracteriza pelo aparecimento de placas avermelhadas e escamosas na pele, geralmente nas áreas dos cotovelos, joelhos, couro cabeludo e região lombar. Essas placas são resultado de um processo inflamatório que acelera o ciclo de crescimento das células da pele, fazendo com que elas se acumulem na superfície. <br><br>
+            A condição é considerada autoimune porque o sistema imunológico ataca erroneamente as células saudáveis da pele. Embora a causa exata seja desconhecida, acredita-se que fatores genéticos e ambientais desempenhem um papel importante no seu desenvolvimento. <br><br>
+            Existem diferentes tipos de psoríase, sendo a psoríase em placas a forma mais comum. Outras variantes incluem psoríase gutata, pustulosa, invertida e eritrodérmica. A doença pode variar em gravidade, desde pequenas áreas afetadas até casos que cobrem grande parte do corpo.
+
+
+
 
         </p>
     </div>
