--- a/scrpt/sug.html
+++ b/scrpt/sug.html
@@ -31,14 +31,24 @@
         </div>
         <div id="direita">
             <h2>Sugestões</h2>
-            <p>
-                <br>
-                <br>
+            <div class="verif">
+                <div class="labels">
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" name="email" required>
+                <label for="password">password</label>
+                <input type="password" id="password" name="password">
+                <input type="submit" value="Enviar">
+            </div>
 
-            </p>
+                <h3></h3>
+                <textarea name="Sugestões" id="sugestoes"   placeholder="introduza a sua menssagem...">
+                  
+                </textarea>
+                <input type="submit" value="Enviar">
+            </div>
+        </div>
         </div>
     </article>
-
 
     
 </body>
