mais conteudo adicionado e remoção da aba Medicamentos

--- a/scrpt/dermatite.html
+++ b/scrpt/dermatite.html
@@ -31,7 +31,15 @@
     <div id="direita">
         <h2>Dermatite Atópica</h2>
         <p>
-            
+            A dermatite atópica, também conhecida como eczema atópico, é uma condição inflamatória crônica da pele. Aqui está uma visão geral sobre a dermatite atópica:
+            <br><br>
+            A dermatite atópica caracteriza-se por pele seca, coceira intensa e erupções cutâneas recorrentes. Geralmente começa na infância, mas pode afetar pessoas de todas as idades. As áreas comumente afetadas incluem o rosto, pescoço, dobras dos cotovelos e joelhos, mas pode ocorrer em qualquer parte do corpo.
+            <br><br>
+            A condição é parte da "tríade atópica", que inclui asma e rinite alérgica. Pessoas com histórico familiar de alergias têm maior probabilidade de desenvolver dermatite atópica. A causa exata não é totalmente compreendida, mas envolve uma combinação de fatores genéticos, imunológicos e ambientais.
+            <br><br>
+            Os sintomas tendem a aparecer em surtos, com períodos de agravamento seguidos por períodos de melhora. Gatilhos comuns incluem irritantes (como sabões fortes), alérgenos, estresse, mudanças climáticas e infecções.
+            <br>
+                        
         </p>
     </div>
 </article>
