--- a/scrpt/sug.html
+++ b/scrpt/sug.html
@@ -24,22 +24,22 @@
                     <li><a href="tecnologi-dermatite.html">Tec.Dermatite</a></li>
                     <li><a href="psoriase.html">Psoríase</a></li>
                     <li><a href="Tecnologia.html">Tec.Psoríase</a></li>
-                    <li><a href="Medicamentos.html">Medicamentos</a></li>
                     <li><a href="sug.html">Plus</a></li>
                 </ul>
             </nav>
         </div>
         <div id="direita">
             <h2>Sugestões</h2>
-            <div class="verif">
+         <div class="verif">
+             <div class="nome">
                 <div class="labels">
                 <label for="email">E-mail:</label>
                 <input type="email" id="email" name="email" required>
                 <label for="password">password</label>
                 <input type="password" id="password" name="password">
                 <input type="submit" value="Enviar">
-            </div>
-
+             </div>
+          </div>
                 <h3></h3>
                 <textarea name="Sugestões" id="sugestoes"   placeholder="introduza a sua menssagem...">
                   
