--- a/scrpt/tecnologi-dermatite.html
+++ b/scrpt/tecnologi-dermatite.html
@@ -4,8 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style/style.css">
 </head>
+<div class="title">
+    <h1>Digital Health</h1>
+</div>
 <body>
-    
+
+
+<article>
+<header>Doenças</header>
+    <div id="esquerda">
+        <nav>
+            <ul id="menu">
+                <li><a href="main.html">Inicio</a></li>
+                <li><a href="Acne.html">Acne</a></li>
+                <li><a href="tecnologia-acne.html">Tec.Acne</a></li>
+                <li><a href="dermatite.html">Dermatite Atópica </a></li>
+                <li><a href="tecnologi-dermatite.html">Tec.Dermatite</a></li>
+                <li><a href="psoriase.html">Psoríase</a></li>
+                <li><a href="Tecnologia.html">Tec.Psoríase</a></li>
+                <li><a href="sug.html">Plus</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div id="direita">
+        <h2>Dermatite Atópica</h2>
+        <p>
+            Diagnóstico assistido por IA: Algoritmos analisam imagens da pele para identificar e classificar lesões características da dermatite atópica, auxiliando no diagnóstico precoce e monitoramento da doença.
+            <br><br>
+            Previsão de surtos: Modelos de IA processam dados do paciente, incluindo histórico de sintomas e fatores ambientais, para prever a probabilidade de surtos futuros, permitindo intervenções preventivas.
+            <br><br>
+            Personalização de tratamentos: Sistemas de IA analisam dados clínicos para recomendar planos de tratamento personalizados, baseados nas características individuais do paciente e na eficácia de tratamentos anteriores.
+            <br><br>
+            Chatbots de suporte: Assistentes virtuais baseados em IA fornecem informações, respondem a perguntas comuns e oferecem orientações básicas de cuidados, melhorando o acesso a informações confiáveis para pacientes.
+                        
+        </p>
+    </div>
+</article>
 </body>
 </html>
