Adicionado outros conteudos

--- a/scrpt/Tecnologia.html
+++ b/scrpt/Tecnologia.html
@@ -30,9 +30,16 @@
     <div id="direita">
         <h2>Tecnologia e seu Beneficios</h2>
         <p>
-            <br>
-            <br>
-        </p>
+            Algoritmos de análise de imagem: Programas de visão computacional são desenvolvidos para processar imagens digitais da pele, quantificando a área afetada, o grau de descamação e a vermelhidão. Esses algoritmos podem ajudar a calcular o PASI (Psoriasis Area and Severity Index) automaticamente, tornando o acompanhamento da doença mais objetivo e consistente.
+            <br><br>
+            Plataformas de telemedicina personalizadas: Sistemas de software são criados especificamente para facilitar consultas remotas entre pacientes com psoríase e dermatologistas. Estes incluem ferramentas para upload seguro de imagens, questionários interativos para avaliação de sintomas e integração com registros médicos eletrônicos.
+            <br><br>
+            Sistemas de recomendação de tratamento baseados em machine learning: Algoritmos de aprendizado de máquina são programados para analisar grandes conjuntos de dados de pacientes, incluindo histórico de tratamentos, genética e fatores ambientais. Com base nessa análise, o sistema pode recomendar o plano de tratamento mais provável de ser eficaz para um paciente individual.
+            <br><br>
+            APIs para integração de dados de saúde: Programadores desenvolvem interfaces de programação de aplicativos (APIs) que permitem a integração segura de dados de várias fontes - como dispositivos vestíveis, aplicativos de monitoramento de saúde e registros médicos eletrônicos. Isso facilita uma visão mais holística da saúde do paciente e pode ajudar a identificar correlações entre a psoríase e  outros fatores de saúde ou estilo de vida.
+            <br><br>
+            Estas aplicações demonstram como a programação está sendo usada para criar ferramentas mais sofisticadas e personalizadas para o manejo da psoríase, melhorando tanto a eficácia clínica quanto a experiência do paciente.
+                    </p>
     </div>
 </article>
     
