--- a/scrpt/tecnologia-acne.html
+++ b/scrpt/tecnologia-acne.html
@@ -31,21 +31,15 @@
         <div id="direita">
             <h2>Tec. Acne</h2>
                <p>
-                Agora irei mostrar como a tecnologia pode ajudar no tratamento da Acne
-               </p>
-        </div>
-        <br><br>
-        <div id="direita2">
-            <p>
+                Agora irei mostrar como a tecnologia pode ajudar no tratamento da Acne  <br><br>
+                
                 Microagulhamento com radiofrequência: Esta técnica combina microagulhas com energia de radiofrequência. As microagulhas criam pequenos canais na pele, enquanto a radiofrequência estimula a produção de colágeno. Isso ajuda a reduzir cicatrizes de acne e melhora a textura da pele. <br> <br>
                 Laser fracionado: Utiliza feixes de laser para criar microlesões controladas na pele, estimulando a regeneração e reduzindo cicatrizes. O laser CO2 fracionado é particularmente eficaz para cicatrizes de acne profundas. <br> <br>
                 Ultrassom microfocado: Esta tecnologia usa ondas de ultrassom para atingir camadas profundas da pele, estimulando a produção de colágeno e elastina. Pode ser útil para melhorar a textura da pele e reduzir a aparência de poros dilatados, comuns em peles acneicas. <br> <br>
                 Sistemas de análise de pele baseados em IA: Câmeras especializadas capturam imagens detalhadas da pele, e algoritmos de IA analisam fatores como tipo de acne, distribuição das lesões e níveis de oleosidade. Isso permite um diagnóstico mais preciso e um plano de tratamento personalizado.
-            </p>
+               </p>
         </div>
-        <footer>Feito por: <br>
-            Eduardo Vemba 202300364 & Muhamedi Djane 202300366
-        </footer>
+       
     </article>
     <div>
 </body>
