Adicionado interação com JS

--- a/scrpt/dermatite.html
+++ b/scrpt/dermatite.html
@@ -35,8 +35,10 @@
             <br><br>
             A dermatite atópica caracteriza-se por pele seca, coceira intensa e erupções cutâneas recorrentes. Geralmente começa na infância, mas pode afetar pessoas de todas as idades. As áreas comumente afetadas incluem o rosto, pescoço, dobras dos cotovelos e joelhos, mas pode ocorrer em qualquer parte do corpo.
             <br><br>
+            <img src="/img/derma1.webp" alt="" class="img7">
             A condição é parte da "tríade atópica", que inclui asma e rinite alérgica. Pessoas com histórico familiar de alergias têm maior probabilidade de desenvolver dermatite atópica. A causa exata não é totalmente compreendida, mas envolve uma combinação de fatores genéticos, imunológicos e ambientais.
             <br><br>
+            <img src="/img/derma2.jpg" alt="" class="img8">
             Os sintomas tendem a aparecer em surtos, com períodos de agravamento seguidos por períodos de melhora. Gatilhos comuns incluem irritantes (como sabões fortes), alérgenos, estresse, mudanças climáticas e infecções.
             <br>
                         
