--- a/scrpt/dermatite.html
+++ b/scrpt/dermatite.html
@@ -35,7 +35,7 @@
             <br><br>
             A dermatite atópica caracteriza-se por pele seca, coceira intensa e erupções cutâneas recorrentes. Geralmente começa na infância, mas pode afetar pessoas de todas as idades. As áreas comumente afetadas incluem o rosto, pescoço, dobras dos cotovelos e joelhos, mas pode ocorrer em qualquer parte do corpo.
             <br><br>
-            <img src="/img/derma1.webp" alt="" class="img7">
+            <img src="/img/derma1.webp" alt="" class="img7"> <br><br><br><br><br>
             A condição é parte da "tríade atópica", que inclui asma e rinite alérgica. Pessoas com histórico familiar de alergias têm maior probabilidade de desenvolver dermatite atópica. A causa exata não é totalmente compreendida, mas envolve uma combinação de fatores genéticos, imunológicos e ambientais.
             <br><br>
             <img src="/img/derma2.jpg" alt="" class="img8">
