--- a/scrpt/Tecnologia.html
+++ b/scrpt/Tecnologia.html
@@ -28,7 +28,7 @@
         </nav>
     </div>
     <div id="direita">
-        <h2>Tecnologia e seu Beneficios</h2>
+        <h2>Tec.Psoríase</h2>
         <p>
             Algoritmos de análise de imagem: Programas de visão computacional são desenvolvidos para processar imagens digitais da pele, quantificando a área afetada, o grau de descamação e a vermelhidão. Esses algoritmos podem ajudar a calcular o PASI (Psoriasis Area and Severity Index) automaticamente, tornando o acompanhamento da doença mais objetivo e consistente.
             <br><br>
