--- a/scrpt/Tecnologia.html
+++ b/scrpt/Tecnologia.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dermatite</title>
+    <title>Tec.Psoríase</title>
     <link rel="stylesheet" href="../style/style.css">
 </head>
 <div class="title">
@@ -23,13 +23,16 @@
                 <li><a href="tecnologi-dermatite.html">Tec.Dermatite</a></li>
                 <li><a href="psoriase.html">Psoríase</a></li>
                 <li><a href="Tecnologia.html">Tec.Psoríase</a></li>
-                <li><a href="sug.html">Plus</a></li>
+                <li><a href="sug.html">Sugestões</a></li>
             </ul>
         </nav>
     </div>
     <div id="direita">
         <h2>Tec.Psoríase</h2>
         <p>
+
+            Agora irei mostrar como a tecnologia pode ajudar no tratamento da Psoríase  <br><br>
+
             Algoritmos de análise de imagem: Programas de visão computacional são desenvolvidos para processar imagens digitais da pele, quantificando a área afetada, o grau de descamação e a vermelhidão. Esses algoritmos podem ajudar a calcular o PASI (Psoriasis Area and Severity Index) automaticamente, tornando o acompanhamento da doença mais objetivo e consistente.
             <br><br>
             Plataformas de telemedicina personalizadas: Sistemas de software são criados especificamente para facilitar consultas remotas entre pacientes com psoríase e dermatologistas. Estes incluem ferramentas para upload seguro de imagens, questionários interativos para avaliação de sintomas e integração com registros médicos eletrônicos.
