--- a/scrpt/sug.html
+++ b/scrpt/sug.html
@@ -25,7 +25,7 @@
                     <li><a href="tecnologi-dermatite.html">Tec.Dermatite</a></li>
                     <li><a href="psoriase.html">Psoríase</a></li>
                     <li><a href="Tecnologia.html">Tec.Psoríase</a></li>
-                    <li><a href="sug.html">Plus</a></li>
+                    <li><a href="sug.html">Sugestões</a></li>
                 </ul>
             </nav>
         </div>
