--- a/scrpt/tecnologia-acne.html
+++ b/scrpt/tecnologia-acne.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tec.Acne</title>
     <link rel="stylesheet" href="../style/style.css">
   
 </head>
@@ -24,7 +24,7 @@
                     <li><a href="tecnologi-dermatite.html">Tec.Dermatite</a></li>
                     <li><a href="psoriase.html">Psoríase</a></li>
                     <li><a href="Tecnologia.html">Tec.Psoríase</a></li>
-                    <li><a href="sug.html">Plus</a></li>
+                    <li><a href="sug.html">Sugestões</a></li>
                 </ul>
             </nav>
         </div>
@@ -34,9 +34,14 @@
                 Agora irei mostrar como a tecnologia pode ajudar no tratamento da Acne  <br><br>
                 
                 Microagulhamento com radiofrequência: Esta técnica combina microagulhas com energia de radiofrequência. As microagulhas criam pequenos canais na pele, enquanto a radiofrequência estimula a produção de colágeno. Isso ajuda a reduzir cicatrizes de acne e melhora a textura da pele. <br> <br>
+
                 Laser fracionado: Utiliza feixes de laser para criar microlesões controladas na pele, estimulando a regeneração e reduzindo cicatrizes. O laser CO2 fracionado é particularmente eficaz para cicatrizes de acne profundas. <br> <br>
+
                 Ultrassom microfocado: Esta tecnologia usa ondas de ultrassom para atingir camadas profundas da pele, estimulando a produção de colágeno e elastina. Pode ser útil para melhorar a textura da pele e reduzir a aparência de poros dilatados, comuns em peles acneicas. <br> <br>
-                Sistemas de análise de pele baseados em IA: Câmeras especializadas capturam imagens detalhadas da pele, e algoritmos de IA analisam fatores como tipo de acne, distribuição das lesões e níveis de oleosidade. Isso permite um diagnóstico mais preciso e um plano de tratamento personalizado.
+
+                Sistemas de análise de pele baseados em IA: Câmeras especializadas capturam imagens detalhadas da pele, e algoritmos de IA analisam fatores como tipo de acne, distribuição das lesões e níveis de oleosidade. Isso permite um diagnóstico mais preciso e um plano de tratamento personalizado. <br><br>
+
+                Sistemas de recomendação de tratamento baseados em machine learning: Algoritmos de aprendizado de máquina são programados para analisar grandes conjuntos de dados de pacientes, incluindo histórico de tratamentos, genética e fatores ambientais. Com base nessa análise, o sistema pode recomendar o plano de tratamento mais provável de ser eficaz para um paciente individual.
                </p>
         </div>
        
