--- a/scrpt/tecnologi-dermatite.html
+++ b/scrpt/tecnologi-dermatite.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tec.Dermatite</title>
     <link rel="stylesheet" href="../style/style.css">
 </head>
 <div class="title">
@@ -24,13 +24,14 @@
                 <li><a href="tecnologi-dermatite.html">Tec.Dermatite</a></li>
                 <li><a href="psoriase.html">Psoríase</a></li>
                 <li><a href="Tecnologia.html">Tec.Psoríase</a></li>
-                <li><a href="sug.html">Plus</a></li>
+                <li><a href="sug.html">Sugestões</a></li>
             </ul>
         </nav>
     </div>
     <div id="direita">
         <h2>Dermatite Atópica</h2>
         <p>
+            Agora irei mostrar como a tecnologia pode ajudar no tratamento da Dermatite Atópica  <br><br>
             Diagnóstico assistido por IA: Algoritmos analisam imagens da pele para identificar e classificar lesões características da dermatite atópica, auxiliando no diagnóstico precoce e monitoramento da doença.
             <br><br>
             Previsão de surtos: Modelos de IA processam dados do paciente, incluindo histórico de sintomas e fatores ambientais, para prever a probabilidade de surtos futuros, permitindo intervenções preventivas.
