--- a/scrpt/main.html
+++ b/scrpt/main.html
@@ -38,7 +38,7 @@
             <p>Além das inovações tecnológicas, a pesquisa científica contínua está trazendo novas perspectivas para o tratamento das doenças de pele. Novos medicamentos, como os biológicos para psoríase e dermatite atópica, estão oferecendo opções mais eficazes e específicas para os pacientes. <br> <br> A conscientização sobre a importância de cuidados preventivos, como o uso regular de protetor solar e uma rotina de cuidados com a pele, também está em ascensão, ajudando a reduzir a incidência e a gravidade dessas condições. <br> <br> A colaboração entre dermatologistas, pesquisadores e tecnólogos promete um futuro com tratamentos mais personalizados e menos invasivos, melhorando significativamente a qualidade de vida dos pacientes.</p>
         </div>
         <footer>Feito por: <br>
-            Eduardo Vemba 202300364 & Muhamedi Djane 202300366
+            Eduardo Vemba 202300364 & Mahamadi Djane 202300366
         </footer>
     </article>
     <div>
